--- a/src/main/resources/templates/security/registration.html
+++ b/src/main/resources/templates/security/registration.html
@@ -5,17 +5,11 @@
     <title>Spring Security Example </title>
 </head>
 <body>
-<div th:if="${param.error}">
-    Invalid username and password.
-</div>
-<div th:if="${param.logout}">
-    You have been logged out.
-</div>
-<form th:action="@{/login}" method="post"> // исправить урл
+
+<form th:action="@{/registration}" method="post"> // исправить урл
     <div><label> User Name : <input type="text" name="login"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
+    <div><input type="submit" value="Registration"/></div>
 </form>
-<a th:href="@{/registration}">Add new customer</a>
 </body>
 </html>
