added authorization and registration

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -130,7 +130,7 @@
     <a href="#" class="active">Главная страница</a>
     <a href="#">Пищевой Журнал</a>
     <a href="#">Список продуктов</a>
-    <a th:href="@{/customers/registration}" class="right">Регистрация</a>
+    <a th:href="@{/registration}" class="right">Регистрация</a>
     <a th:href="@{/customers/login}" class="right">Авторизация</a> //потом вставить страницу с профилем
 </div>
 
