--- a/src/main/resources/templates/security/login.html
+++ b/src/main/resources/templates/security/login.html
@@ -12,7 +12,7 @@
     You have been logged out.
 </div>
 <form th:action="@{/login}" method="post"> // исправить урл
-    <div><label> User Name : <input type="text" name="login"/> </label></div>
+    <div><label> Login : <input type="text" name="login"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
