--- a/src/main/resources/templates/security/registration.html
+++ b/src/main/resources/templates/security/registration.html
@@ -7,7 +7,7 @@
 <body>
 
 <form th:action="@{/registration}" method="post"> // исправить урл
-    <div><label> User Name : <input type="text" name="login"/> </label></div>
+    <div><label> Login : <input type="text" name="login"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Registration"/></div>
 </form>
