added html form without  food diary

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -10,6 +10,9 @@
     <a href="#" class="pure-menu-link pure-menu-heading">Мой профиль</a>
     <ul class="pure-menu-list">
         <li class="pure-menu-item">
+            <a href="#" class="pure-menu-link">Мой профиль</a>
+        </li>
+        <li class="pure-menu-item">
             <a href="" class="pure-menu-link">Пищевой Журнал</a>
         </li>
         <li class="pure-menu-item">
