--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -128,24 +128,25 @@
 
 <div class="navbar">
     <a href="#" class="active">Главная страница</a>
-    <a href="#">Пищевой Журнал</a>
-    <a href="#">Список продуктов</a>
+    <a th:href="@{/customers/profile}">Моя страница</a>
+    <a th:href="@{/foodDiary}">Дневник питания</a>
+    <a th:href="@{/products}">Таблица продуктов</a>
     <a th:href="@{/registration}" class="right">Регистрация</a>
-    <a th:href="@{/customers/login}" class="right">Авторизация</a> //потом вставить страницу с профилем
+    <a th:href="@{/customers/login}" class="right">Авторизация</a>
 </div>
 
 <div class="row">
-    <div class="side">
-        <h2>Мои страница</h2>
-        <h5>Фото:</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
-        <p>Некоторая информация обо мне</p>
-        <h3>Мои параметры</h3>
-        <p>Lorem ipsum dolor sit ame.</p>
-        <div class="fakeimg" style="height:60px;">Image</div><br>
-        <div class="fakeimg" style="height:60px;">Image</div><br>
-        <div class="fakeimg" style="height:60px;">Image</div>
-    </div>
+<!--    <div class="side">-->
+<!--        <h2>Мои страница</h2>-->
+<!--        <h5>Фото:</h5>-->
+<!--        <div class="fakeimg" style="height:200px;">Image</div>-->
+<!--        <p>Некоторая информация обо мне</p>-->
+<!--        <h3>Мои параметры</h3>-->
+<!--        <p>Lorem ipsum dolor sit ame.</p>-->
+<!--        <div class="fakeimg" style="height:60px;">Image</div><br>-->
+<!--        <div class="fakeimg" style="height:60px;">Image</div><br>-->
+<!--        <div class="fakeimg" style="height:60px;">Image</div>-->
+<!--    </div>-->
     <div class="main">
         <h2>Лента новостей</h2>
         <h5>Title description, Dec 7, 2017</h5>
