--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+
+
+
+
+
+
+
         * {
             box-sizing: border-box;
         }
@@ -118,6 +125,7 @@
             }
         }
     </style>
+
 </head>
 <body>
 
@@ -132,6 +140,7 @@
     <a th:href="@{/daily-menus}">Дневник питания</a>
     <a th:href="@{/products}">Таблица продуктов</a>
     <a th:href="@{/registration}" class="right">Регистрация</a>
+    <a th:href="@{/logout}" class="right">Выйти из аккаунта</a>
     <a th:href="@{/login}" class="right">Авторизация</a>
 </div>
 
@@ -158,6 +167,11 @@
         </tr>
     </div>
 </div>
+
+
+
+
+
 
 <div class="footer">
     <h2>Footer</h2>
