--- a/src/main/resources/templates/security/login.html
+++ b/src/main/resources/templates/security/login.html
@@ -226,8 +226,8 @@
     <div class="wrapper">
         <div class="container">
             <h1>Добро пожаловать!</h1>
-            <form class="form" method="post" action="customer/loginn">
-                <input type="text" id="username" name="username" placeholder="Логин">
+            <form class="form" method="post" action="/customer/login">
+                <input type="text" id="login" name="login" placeholder="Логин">
                 <input type="password" id="password" name="password" placeholder="Пароль">
                 <button type="submit" id="login-button">Login</button>
             </form>
