--- a/src/main/resources/templates/products/showProduct.html
+++ b/src/main/resources/templates/products/showProduct.html
@@ -5,12 +5,20 @@
     <title>Product</title>
 </head>
 <body>
-<p th:text="${product.getName()}">VALUE</p>
-<p th:text="${product.getId()}">VALUE</p>
-<a th:href="@{/products/{id}/edit(id=${product.getId()})}">Edit</a>
+<tr th:each="product : ${products}">
+    <td><span th:text="${product.name}">  </span></td>
+    <td><span th:text="${product.calories}">  </span></td>
+    <td><span th:text="${product.protein}">  </span></td>
+    <td><span th:text="${product.fat}">  </span></td>
+    <td><span th:text="${product.carbonhydrates}">  </span></td>
+    <td><a th:href="@{/daily-menus/{id}/products/{productId}(id=${dailyMenu.id}, productId=${product.id})}">+</a></td>
+</tr>
+<!--<p th:text="${product.getId()}">VALUE</p>-->
 
-<form th:method="DELETE" th:action="@{/products/{id}(id=${product.getId()})}">
-    <input type="submit" value="Delete"/>
+<!--<a th:href="@{/products/{id}/edit(id=${product.getId()})}">Edit</a>-->
+
+<!--<form th:method="DELETE" th:action="@{/products/{id}(id=${product.getId()})}">-->
+<!--    <input type="submit" value="Delete"/>-->
 </form>
 </body>
 </html>
