--- a/src/main/resources/templates/products/showProduct.html
+++ b/src/main/resources/templates/products/showProduct.html
@@ -26,16 +26,20 @@
 <!--</tr>-->
 
 
-<!--<th:block th:each="product: ${products}">-->
-<!--    <form th:method="post" th:action="@{/daily-menus/{id}/products (id=${dailyMenu.id})}">-->
-<!--        <td><span th:text="${product.name}">  </span></td>-->
-<!--        <td><span th:text="${product.calories}">  </span></td>-->
-<!--        <td><span th:text="${product.protein}">  </span></td>-->
-<!--        <td><span th:text="${product.fat}">  </span></td>-->
-<!--        <td><span th:text="${product.carbonhydrates}">  </span></td>-->
-<!--        <button class="submit-button" type="submit">+</button>-->
-<!--    </form>-->
-<!--</th:block>-->
+<th:block th:each="product: ${products}">
+    <form th:method="post" th:object="${product}" th:action="@{/daily-menus/{id}/products (id=${dailyMenu.id})}">
+        <td><span th:text="${product.name}">  </span></td>
+        <td><span th:text="${product.calories}">  </span></td>
+        <td><span th:text="${product.protein}">  </span></td>
+        <td><span th:text="${product.fat}">  </span></td>
+        <td><span th:text="${product.carbonhydrates}">  </span></td>
+        <button class="submit-button" type="submit">+</button>
+    </form>
+</th:block>
+
+
+
+
 
 <!--<th:block th:each="product: ${products}">-->
 <!--    <form th:method="post" th:object="${product}" th:action="@{/daily-menus/{id}/products (id=${dailyMenu.id})}">-->
@@ -53,6 +57,11 @@
 <!--    </form>-->
 <!--</th:block>-->
 
+
+
+
+
+
 <!--<p th:text="${product.getId()}">VALUE</p>-->
 
 <!--<a th:href="@{/products/{id}/edit(id=${product.getId()})}">Edit</a>-->
@@ -61,50 +70,61 @@
 <!--    <input type="submit" value="Delete"/>-->
 <!--</form>-->
 
-<th:block th:each="product: ${products}">
-        <td><span th:text="${product.name}">  </span></td>
-        <td><span th:text="${product.calories}">  </span></td>
-        <td><span th:text="${product.protein}">  </span></td>
-        <td><span th:text="${product.fat}">  </span></td>
-        <td><span th:text="${product.carbonhydrates}">  </span></td>
-    </form>
-</th:block>
 
-<form th:method="POST" th:action="@{/daily-menus/{id}/products (id=${dailyMenu.id})}" th:object="${product}">
-    <fieldset>
-        <div class="pure-control-group">
-            <label for="name">Название продукта: </label>
-            <input type="text" th:field="*{name}" id="name" placeholder="Название продукта" />
-        </div>
-        <p></p>
-        <div class="pure-control-group">
-            <label for="calories">Калорийность</label>
-            <input type="number"  th:field="*{calories}" id="calories" placeholder="Калорийность" />
-        </div>
-        <p></p>
 
-        <div class="pure-control-group">
-            <label for="protein">Белки</label>
-            <input type="number" th:field="*{protein}" id="protein" placeholder="Белки" />
-        </div>
-        <p></p>
 
-        <div class="pure-control-group">
-            <label for="fat">Жиры</label>
-            <input type="number" th:field="*{fat}" id="fat" placeholder="Жиры" />
-        </div>
-        <p></p>
 
-        <div class="pure-control-group">
-            <label for="carbonhydrates">Углеводы </label>
-            <input type="number" th:field="*{carbonhydrates}" id="carbonhydrates" placeholder="Углеводы" />
-        </div>
-        <p></p>
 
-        <div class="pure-controls">
-            <button type="submit" class="pure-button pure-button-primary">Добавить продукт</button>
-        </div>
-    </fieldset>
-</form>
+
+
+
+
+
+
+<!--<th:block th:each="product: ${products}">-->
+<!--        <td><span th:text="${product.name}">  </span></td>-->
+<!--        <td><span th:text="${product.calories}">  </span></td>-->
+<!--        <td><span th:text="${product.protein}">  </span></td>-->
+<!--        <td><span th:text="${product.fat}">  </span></td>-->
+<!--        <td><span th:text="${product.carbonhydrates}">  </span></td>-->
+<!--    </form>-->
+<!--</th:block>-->
+
+<!--<form th:method="POST" th:action="@{/daily-menus/{id}/products (id=${dailyMenu.id})}" th:object="${product}">-->
+<!--    <fieldset>-->
+<!--        <div class="pure-control-group">-->
+<!--            <label for="name">Название продукта: </label>-->
+<!--            <input type="text" th:field="*{name}" id="name" placeholder="Название продукта" />-->
+<!--        </div>-->
+<!--        <p></p>-->
+<!--        <div class="pure-control-group">-->
+<!--            <label for="calories">Калорийность</label>-->
+<!--            <input type="number"  th:field="*{calories}" id="calories" placeholder="Калорийность" />-->
+<!--        </div>-->
+<!--        <p></p>-->
+
+<!--        <div class="pure-control-group">-->
+<!--            <label for="protein">Белки</label>-->
+<!--            <input type="number" th:field="*{protein}" id="protein" placeholder="Белки" />-->
+<!--        </div>-->
+<!--        <p></p>-->
+
+<!--        <div class="pure-control-group">-->
+<!--            <label for="fat">Жиры</label>-->
+<!--            <input type="number" th:field="*{fat}" id="fat" placeholder="Жиры" />-->
+<!--        </div>-->
+<!--        <p></p>-->
+
+<!--        <div class="pure-control-group">-->
+<!--            <label for="carbonhydrates">Углеводы </label>-->
+<!--            <input type="number" th:field="*{carbonhydrates}" id="carbonhydrates" placeholder="Углеводы" />-->
+<!--        </div>-->
+<!--        <p></p>-->
+
+<!--        <div class="pure-controls">-->
+<!--            <button type="submit" class="pure-button pure-button-primary">Добавить продукт</button>-->
+<!--        </div>-->
+<!--    </fieldset>-->
+<!--</form>-->
 </body>
 </html>
